Archive2/bd/e13f0477a1126c/output
main.cpp: In function 'int main()':
main.cpp:5:12: error: invalid conversion from 'int' to 'int (*)()' [-fpermissive]
     thing(2);
            ^
main.cpp:1:6: note:   initializing argument 1 of 'void thing(int (*)())'
 void thing(int()) {}
      ^
